// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownSelect Component should allow a alternate array and object options: key value object 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      Select option
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        ipsum
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        world
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelect Component should allow a alternate array and object options: string array 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      ipsum
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        lorem
      </a>
    </li>
    <li
      class="active"
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        ipsum
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        hello
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        world
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelect Component should render a basic component: basic dropdown 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      hello
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        lorem
      </a>
    </li>
    <li
      class="active"
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        hello
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelect Component should render a basic component: multiselect dropdown 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      lorem,hello
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="quipucords-dropdownselect-menuitem row"
        >
          <div
            class="quipucords-dropdownselect-menuitemname col-xs-10"
          >
            lorem
          </div>
          <div
            class="quipucords-dropdownselect-menuitemcheck col-xs-2"
          >
            <span
              aria-hidden="true"
              class="fa fa-check"
            />
          </div>
        </div>
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="quipucords-dropdownselect-menuitem row"
        >
          <div
            class="quipucords-dropdownselect-menuitemname col-xs-10"
          >
            hello
          </div>
          <div
            class="quipucords-dropdownselect-menuitemcheck col-xs-2"
          >
            <span
              aria-hidden="true"
              class="fa fa-check"
            />
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelect Component should return an emulated onchange event: emulated event 1`] = `
Object {
  "currentTarget": Object {
    "id": "test",
    "name": "test",
    "options": Array [
      Object {
        "label": "lorem",
        "selected": false,
        "text": "lorem",
        "textContent": "lorem",
        "title": "lorem",
        "value": "lorem",
      },
      Object {
        "label": "ipsum",
        "selected": false,
        "text": "ipsum",
        "textContent": "ipsum",
        "title": "ipsum",
        "value": "ipsum",
      },
      Object {
        "label": "hello",
        "selected": true,
        "text": "hello",
        "textContent": "hello",
        "title": "hello",
        "value": "hello",
      },
      Object {
        "label": "world",
        "selected": false,
        "text": "world",
        "textContent": "world",
        "title": "world",
        "value": "world",
      },
    ],
    "selectedIndex": 2,
    "type": "select-one",
    "value": "hello",
  },
  "id": "test",
  "name": "test",
  "options": Array [
    Object {
      "label": "lorem",
      "selected": false,
      "text": "lorem",
      "textContent": "lorem",
      "title": "lorem",
      "value": "lorem",
    },
    Object {
      "label": "ipsum",
      "selected": false,
      "text": "ipsum",
      "textContent": "ipsum",
      "title": "ipsum",
      "value": "ipsum",
    },
    Object {
      "label": "hello",
      "selected": true,
      "text": "hello",
      "textContent": "hello",
      "title": "hello",
      "value": "hello",
    },
    Object {
      "label": "world",
      "selected": false,
      "text": "world",
      "textContent": "world",
      "title": "world",
      "value": "world",
    },
  ],
  "persist": [Function],
  "selectedIndex": 2,
  "target": Object {
    "id": "test",
    "name": "test",
    "options": Array [
      Object {
        "label": "lorem",
        "selected": false,
        "text": "lorem",
        "textContent": "lorem",
        "title": "lorem",
        "value": "lorem",
      },
      Object {
        "label": "ipsum",
        "selected": false,
        "text": "ipsum",
        "textContent": "ipsum",
        "title": "ipsum",
        "value": "ipsum",
      },
      Object {
        "label": "hello",
        "selected": true,
        "text": "hello",
        "textContent": "hello",
        "title": "hello",
        "value": "hello",
      },
      Object {
        "label": "world",
        "selected": false,
        "text": "world",
        "textContent": "world",
        "title": "world",
        "value": "world",
      },
    ],
    "selectedIndex": 2,
    "type": "select-one",
    "value": "hello",
  },
  "type": "select-one",
  "value": "hello",
}
`;

exports[`DropdownSelect Component should return an emulated onchange event: key value object 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      Select option
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        ipsum
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        world
      </a>
    </li>
  </ul>
</div>
`;

exports[`DropdownSelect Component should return an emulated onchange event: string array 1`] = `
<div
  class="quipucords-dropdownselect  dropdown btn-group"
  name="test"
>
  <button
    aria-expanded="false"
    aria-haspopup="true"
    class="form-control dropdown-toggle btn btn-default"
    id="test"
    role="button"
    type="button"
  >
    <span>
      hello
    </span>
     
    <span
      class="caret"
    />
  </button>
  <ul
    aria-labelledby="test"
    class="dropdown-menu"
    role="menu"
  >
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        lorem
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        ipsum
      </a>
    </li>
    <li
      class="active"
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        hello
      </a>
    </li>
    <li
      class=""
      role="presentation"
    >
      <a
        href="#"
        role="menuitem"
        tabindex="-1"
      >
        world
      </a>
    </li>
  </ul>
</div>
`;
